--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "jni/src/NanoGL/nanogl"]
-	path = jni/src/NanoGL/nanogl
+[submodule "jni/src/NanoGL"]
+	path = jni/src/NanoGL
 	url = https://github.com/FWGS/nanogl
-[submodule "jni/src/Xash3D/xash3d"]
-	path = jni/src/Xash3D/xash3d
+[submodule "jni/src/Xash3D"]
+	path = jni/src/Xash3D
 	url = https://github.com/MoeMod/CSBTE-Mobile
