--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "jni/src/NanoGL"]
-	path = jni/src/NanoGL
-	url = https://github.com/FWGS/nanogl
+	path = app/src/main/jni/src/NanoGL
+	url = https://github.com/MoeMod/nanogl
 [submodule "jni/src/Xash3D"]
-	path = jni/src/Xash3D
-	url = https://github.com/MoeMod/CSBTE-Mobile
+	path = app/src/main/jni/src/Xash3D
+	url = https://github.com/MoeMod/CSMoE
