--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="in.celest.xash3d.csbtem"
-	android:versionCode="1455"
+	android:versionCode="1505"
 	android:versionName="v20"
 	android:installLocation="auto">
 
@@ -21,7 +21,8 @@
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 
 	<application android:label="@string/app_name"
-		android:icon="@drawable/ic_launcher"
+		android:icon="@mipmap/ic_launcher"
+		android:roundIcon="@mipmap/ic_launcher_round"
 		android:allowBackup="false"
 		android:debuggable="true"
 		android:hardwareAccelerated="true"
